--- a/spring-test/bin/main/application.properties
+++ b/spring-test/bin/main/application.properties
@@ -1,1 +1,15 @@
+<!--spring.profiles.include=oauth-->
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+spring.thymelef.cache=false
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=C:\\upload
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+
+logging.level.org.springframework.security.web = debug
+logging.level.ok.springtest.security = debug
