시큐리티 작업 중

--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.hikari.password=0007
 spring.datasource.hikari.connection-test-query=SELECT 1
 
 #마이바티스에서 자동으로 카멜 표기법으로 변수명을 바꾸어줌
-<<<<<<< HEAD
+
 mybatis.configuration.map-underscore-to-camel-case=true
-=======
-mybatis.configuration.map-underscore-to-camel-case=true
->>>>>>> refs/remotes/origin/testmaster
+
+spring.profiles.include=oauth
+
