--- a/spring-oauth/src/main/resources/application-oauth.properties
+++ b/spring-oauth/src/main/resources/application-oauth.properties
@@ -1,3 +1,3 @@
 spring.security.oauth2.client.registration.google.client-id=995111730578-la721e7pr9c4skjpj9v3ukruv6u782v1.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=j6OPOnMjKtt3lD_EaVFCJd5L
-spring.security.oauth2.client.registration.google.scope=email
+spring.security.oauth2.client.registration.google.scope=profile, email
